# trovato

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  clippy.toml  docker-compose.yml
benchmarks/load-test/: Cargo.toml
benchmarks/load-test/src/: main.rs
benchmarks/phase0/: Cargo.toml
benchmarks/phase0/guest/: Cargo.toml
benchmarks/phase0/src/: bench_async.rs  bench_concurrency.rs  bench_handle.rs  bench_serialize.rs  fixture.rs  host.rs  main.rs
crates/kernel/: Cargo.toml
crates/kernel/migrations/: 20260212000001_create_users.sql  20260212000002_create_roles.sql  20260212000003_create_password_reset.sql  20260212000004_create_item_types.sql  20260212000005_create_items.sql  20260212000006_create_category.sql  20260212000007_create_category_tag.sql  20260212000008_create_category_tag_hierarchy.sql  20260212000009_create_gather_view.sql  20260212000010_create_form_state_cache.sql  20260213000001_create_search_config.sql  20260213000002_create_search_trigger.sql  20260213000003_create_file_managed.sql  20260214000001_create_comments.sql  20260215000001_create_site_config.sql  20260216000001_create_config_revision.sql  20260216000002_create_config_stage_association.sql  20260216000003_create_stage_deletion.sql  20260216000004_create_url_alias.sql  20260217000001_create_api_tokens.sql  20260218000001_rename_gather_view_to_query.sql  20260219000001_create_plugin_status.sql  20260219000002_create_plugin_migration.sql  20260220000003_create_language.sql  20260221000001_create_menu_link.sql  20260221000002_create_stage.sql  20260221000003_fix_scheduled_publishing_field.sql  20260222000001_seed_format_permissions.sql  20260222000002_create_tile.sql  20260223000001_create_email_verification_tokens.sql  20260223000002_add_verification_token_purpose.sql  20260223000003_add_unique_constraints.sql  20260223000004_username_case_insensitive.sql  20260223000005_email_case_insensitive.sql  20260224000001_seed_conference_item_type.sql  20260224000002_seed_conference_items.sql  20260225000001_create_stages_vocabulary.sql  20260225000002_create_stage_config.sql  20260225000003_migrate_stage_fks.sql  20260225000004_add_item_group_id.sql  (+21 more)
crates/kernel/src/: circuit_breaker.rs  config.rs  db.rs  error.rs  lib.rs  lockout.rs  main.rs  permissions.rs  session.rs  state.rs
crates/kernel/tests/: api_ai_assist_test.rs  cache_test.rs  category_test.rs  config_storage_test.rs  cron_test.rs  form_test.rs  gather_test.rs  integration_test.rs  item_test.rs  plugin_test.rs  search_test.rs  stage_aware_config_test.rs  stage_test.rs  theme_test.rs  tutorial_test.rs  url_alias_test.rs  vector_store_test.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: auth.rs  lib.rs  main.rs  server.rs
crates/mcp-server/tests/: mcp_test.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk-macros/: Cargo.toml
crates/plugin-sdk-macros/src/: lib.rs
crates/plugin-sdk/src/: host.rs  host_errors.rs  lib.rs  render.rs  types.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
plugins/argus/: Cargo.toml  argus.info.toml
plugins/argus/migrations/: 001_gather_queries.sql  002_roles.sql  003_url_aliases.sql
plugins/argus/src/: lib.rs
plugins/block_editor/: Cargo.toml  block_editor.info.toml
plugins/block_editor/src/: lib.rs
plugins/categories/: Cargo.toml  categories.info.toml
plugins/categories/src/: lib.rs
plugins/config_translation/: Cargo.toml  config_translation.info.toml
plugins/config_translation/migrations/: 001_create_config_translation.sql
plugins/config_translation/src/: lib.rs
plugins/content_locking/: Cargo.toml  content_locking.info.toml
plugins/content_locking/migrations/: 001_create_editing_lock.sql
plugins/content_locking/src/: lib.rs
plugins/goose/: Cargo.toml  goose.info.toml
plugins/goose/migrations/: 001_roles.sql
plugins/goose/src/: lib.rs
plugins/image_styles/: Cargo.toml  image_styles.info.toml
plugins/image_styles/migrations/: 001_create_image_style.sql
plugins/image_styles/src/: lib.rs
plugins/locale/: Cargo.toml  locale.info.toml
plugins/locale/migrations/: 001_create_locale_string.sql
plugins/locale/src/: lib.rs
plugins/oauth2/: Cargo.toml  oauth2.info.toml
plugins/oauth2/migrations/: 003_roles.sql  004_add_scopes_column.sql
plugins/oauth2/src/: lib.rs
plugins/redirects/: Cargo.toml  redirects.info.toml
plugins/redirects/migrations/: 001_create_redirect.sql  002_gather_queries.sql  003_roles.sql
plugins/redirects/src/: lib.rs
plugins/ritrovo_access/: Cargo.toml  ritrovo_access.info.toml
plugins/ritrovo_access/src/: lib.rs
plugins/ritrovo_cfp/: Cargo.toml  ritrovo_cfp.info.toml
plugins/ritrovo_cfp/src/: lib.rs
plugins/ritrovo_importer/: Cargo.toml  ritrovo_importer.info.toml
plugins/ritrovo_importer/migrations/: 001_create_ritrovo_state.sql  002_dedup_conferences.sql  003_remove_conferences_alias.sql
plugins/ritrovo_importer/src/: lib.rs
plugins/ritrovo_notify/: Cargo.toml  ritrovo_notify.info.toml
plugins/ritrovo_notify/migrations/: 001_create_pending_notifications.sql
plugins/ritrovo_notify/src/: lib.rs
plugins/scheduled_publishing/: Cargo.toml  scheduled_publishing.info.toml
plugins/scheduled_publishing/src/: lib.rs
plugins/tag1_content/: Cargo.toml  tag1_content.info.toml
plugins/tag1_content/src/: lib.rs
plugins/tag1_hubspot/: Cargo.toml  tag1_hubspot.info.toml
plugins/tag1_hubspot/src/: lib.rs
plugins/trovato_captcha/: Cargo.toml  trovato_captcha.info.toml
plugins/trovato_captcha/src/: lib.rs
plugins/trovato_feeds/: Cargo.toml  trovato_feeds.info.toml
plugins/trovato_feeds/src/: lib.rs
plugins/trovato_oauth2/: Cargo.toml  trovato_oauth2.info.toml
plugins/trovato_oauth2/migrations/: 001_create_oauth_client.sql  002_gather_queries.sql
plugins/trovato_oauth2/src/: lib.rs
plugins/trovato_page_builder/: Cargo.toml  trovato_page_builder.info.toml
plugins/trovato_page_builder/src/: lib.rs
plugins/trovato_scolta/: Cargo.toml  trovato_scolta.info.toml
(+839 files in other folders)
