[workspace]
resolver = "2"
members = [
    "crates/kernel",
    "crates/plugin-sdk",
    "crates/test-utils",
    "benchmarks/phase0",
    "benchmarks/phase0/guest",
    "plugins/blog",
]

[workspace.package]
edition = "2024"
license = "GPL-2.0-or-later"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-sessions = "0.13"
tower-sessions-redis-store = "0.14"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"] }
sea-query = { version = "0.32", features = ["backend-postgres"] }
wasmtime = "28"
wasmtime-wasi = "28"
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.27", features = ["tokio-comp", "cluster-async"] }
dashmap = "6"
tera = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
anyhow = "1"
