[workspace]
resolver = "2"
members = [
    "crates/kernel",
    "crates/plugin-sdk",
    "crates/test-utils",
    "benchmarks/phase0",
    "benchmarks/phase0/guest",
    "plugins/blog",
]

[workspace.package]
edition = "2024"
license = "GPL-2.0-or-later"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout", "compression-gzip"] }
tower-sessions = "0.14"
tower-sessions-redis-store = "0.16"
fred = { version = "10", features = ["subscriber-client"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"] }
sea-query = { version = "0.32", features = ["backend-postgres"] }
wasmtime = "28"
wasmtime-wasi = "28"
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.27", features = ["tokio-comp", "cluster-async"] }
dashmap = "6"
tera = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
anyhow = "1"
dotenvy = "0.15"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
