[workspace]
resolver = "2"
members = [
    "crates/kernel",
    "crates/mcp-server",
    "crates/plugin-sdk",
    "crates/plugin-sdk-macros",
    "crates/test-utils",
    "benchmarks/phase0",
    "benchmarks/load-test",
    "plugins/trovato_blog",
    "plugins/trovato_media",
    "plugins/trovato_redirects",
    "plugins/trovato_audit_log",
    "plugins/trovato_scheduled_publishing",
    "plugins/trovato_content_locking",
    "plugins/trovato_webhooks",
    "plugins/trovato_image_styles",
    "plugins/trovato_oauth2",
    "plugins/trovato_categories",
    "plugins/trovato_comments",
    "plugins/trovato_locale",
    "plugins/trovato_content_translation",
    "plugins/trovato_config_translation",
    "plugins/trovato_block_editor",
    "plugins/trovato_search",
    "plugins/trovato_ai",
    "plugins/argus",
    "plugins/netgrasp",
    "plugins/goose",
    "plugins/ritrovo_importer",
    "plugins/ritrovo_cfp",
    "plugins/ritrovo_notify",
    "plugins/ritrovo_translate",
    "plugins/ritrovo_access",
]
# Guest WASM crate must be built separately with --target wasm32-wasip1
# Plugin cdylibs (argus, netgrasp, goose) excluded — build with --target wasm32-wasip1
default-members = [
    "crates/kernel",
    "crates/mcp-server",
    "crates/plugin-sdk",
    "crates/plugin-sdk-macros",
    "crates/test-utils",
    "benchmarks/phase0",
    "benchmarks/load-test",
    "plugins/trovato_blog",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "GPL-2.0-or-later"

[workspace.dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout", "compression-gzip", "cors"] }
tower-sessions = "0.14"
tower-sessions-redis-store = "0.16"
fred = { version = "10", features = ["subscriber-client"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"] }
sea-query = { version = "0.32", features = ["backend-postgres", "with-uuid"] }
wasmtime = "28"
wasmtime-wasi = "28"
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "=0.0.12"
toml = "0.8"
moka = { version = "0.12", features = ["future", "sync"] }
redis = { version = "0.27", features = ["tokio-comp", "cluster-async"] }
dashmap = "6"
tera = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
anyhow = "1"
dotenvy = "0.15"
hex = "0.4"
infer = "0.19"
rand = "0.8"
regex = "1"
sha2 = "0.10"
hostname = "0.4"
async-trait = "0.1"
urlencoding = "2"
prometheus-client = "0.22"
clap = { version = "4", features = ["derive"] }
image = "0.25"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "stream"] }
hmac = "0.12"
aes-gcm = "0.10"
hkdf = "0.12"
subtle = "2"
base64 = "0.22"
url = "2"
aws-sdk-s3 = "1"
aws-config = "1"
ammonia = "4"
syntect = "5"
parking_lot = "0.12"
tokio-stream = "0.1"
async-stream = "0.3"
futures-core = "0.3"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
# The following are already covered by `all` but listed explicitly so they
# remain visible as project-level expectations and survive any future change
# to the `all` group.
manual_let_else = "warn"
uninlined_format_args = "warn"
semicolon_if_nothing_returned = "warn"
