[package]
name = "trovato-loadtest"
version.workspace = true
edition = "2024"

[[bin]]
name = "loadtest"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
rand = "0.8"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
