[package]
name = "trovato-kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Trovato CMS kernel — HTTP server, plugin runtime, and core services"

[lib]
name = "trovato_kernel"
path = "src/lib.rs"

[[bin]]
name = "trovato"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-redis-store = { workspace = true }
fred = { workspace = true }
sqlx = { workspace = true }
sea-query = { workspace = true }
wasmtime = { workspace = true }
argon2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
moka = { workspace = true }
redis = { workspace = true }
dashmap = { workspace = true }
tera = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
trovato-sdk = { path = "../plugin-sdk" }

[dev-dependencies]
http-body-util = "0.1"
uuid = { workspace = true }
