[package]
name = "trovato-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server for Trovato CMS"

[lib]
name = "trovato_mcp"
path = "src/lib.rs"

[[bin]]
name = "trovato-mcp"
path = "src/main.rs"

[dependencies]
trovato-kernel = { path = "../kernel" }
rmcp = { version = "0.16", features = ["transport-io"] }
schemars = "1"
tokio = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
argon2 = { workspace = true }
sqlx = { workspace = true }

[lints]
workspace = true
