[package]
name = "trovato-sdk-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for Trovato plugin development"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
