[package]
name = "trovato-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integration testing helpers for Trovato"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
