[package]
name = "block_editor"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Enables Editor.js block editing for Blocks fields"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
