[package]
name = "categories_plugin"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Categories plugin for Trovato"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
