[package]
name = "config_translation"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Config translation plugin for Trovato"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
