[package]
name = "content_locking"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Content locking plugin for Trovato"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
