[package]
name = "goose"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Load testing metrics and results plugin for Trovato"

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
