[package]
name = "ritrovo_access"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Editorial workflow access control for Ritrovo conferences"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
