[package]
name = "ritrovo_cfp"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "CFP deadline badge and validation for Ritrovo conferences"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
