[package]
name = "ritrovo_notify"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Subscription and notification system for Ritrovo conferences"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
