[package]
name = "tag1_content"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Tag1 Consulting content types: blog, case study, team member, composed page"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
