[package]
name = "tag1_hubspot"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "HubSpot CRM integration for Trovato contact form submissions"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
