[package]
name = "trovato_captcha"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Cloudflare Turnstile CAPTCHA validation for Trovato forms"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
