[package]
name = "trovato_feeds"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "RSS/Atom feed generation for Trovato content"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
