[package]
name = "trovato_oauth2"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "OAuth2 provider plugin for Trovato"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
