[package]
name = "trovato_page_builder"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Visual page composition with Puck editor and server-side Tera rendering"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
