[package]
name = "trovato_scolta"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "AI-powered search integration for Trovato (Scolta)"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
trovato-sdk = { path = "../../crates/plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
